Updated basic configurations

--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ plugins:
 # Site settings
 url: 'https://mydomain.com'
 baseurl: ''
-title: 'My website'
-description: 'This is my new website'
+title: 'Ricardo Semião'
+description: 'Ricardo Semião's homepage'
 permalink: pretty
-logo: "https://www.gravatar.com/avatar/6c0377abcf4da91cdd35dea4554b2a4c?s=52"
+logo: "https://i.imgur.com/mU5uS5t.png"
 
 # Pagination
 paginate: 5
