--- a/config/step_presets.yaml
+++ b/config/step_presets.yaml
@@ -16,3 +16,35 @@ inject_project:
       site-scripts: {position: "after", selector: "#site-footer"}
     }
   }
+  quartoblog: {
+    subsource: _dist/blog,
+    components: {
+      site-header: {position: "before", selector: "#quarto-search-results"},
+      #site-footer: {position: "after", selector: "#quarto-content"},
+      #site-scripts: {position: "after", selector: "#site-footer"}
+    }
+  }
+
+assets_remove: {
+  pkg-bookdown: [
+    {subsource: assets, include: "global\\.(js|css)"},
+    {include: "sitemap\\.xml"}
+  ]
+}
+
+build_sitemap:
+  sitemap: {
+    exclude: "(404|LICENSE.*|authors)\\.html",
+    sep_external: False,
+    external: [library/rfcd, tools/phyopt, tools/mtsdesc],
+    priority: {
+      index.html: 1.0,
+      cv/index.html: 0.5,
+      blog/index.html: 0.5,
+      library/rfcd/index.html: 0.8,
+      tools/phyopt/index.html: 0.8,
+      tools/mtsdesc/index.html: 0.8,
+    },
+    changefreq: {}
+  }
+# changefreq options: always, hourly, daily, weekly, monthly, yearly and never
