--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "dotenv>=0.9.9",
+    "numpy>=2.3.4",
     "python-frontmatter>=1.1.0",
     "pyyaml>=6.0.3",
     "requests>=2.32.5",
