Gallery, styling, and build improvements
- Finished gallery for now, secondary choices to the algorithm
- Added include/exclude options for SCSS asset job
- Redid cache
- Allowed template injection to arbitrary filenames, still in progress
- Next, gonna turn iteration into a single loop at the job then step level, following order in jobs.yaml

--- a/config/external_sources.yaml
+++ b/config/external_sources.yaml
@@ -25,8 +25,9 @@ mtsdesc:
   target: _dist/tools/mtsdesc
   update_required: true
 
-palette:
-  remote: https://raw.githubusercontent.com/ricardo-semiao/ricardo-semiao/refs/heads/main/themes/palette/palette.css
-  local: PATH_LOCAL_PALETTE
-  target: src/global/palette.css
-  update_required: false
+# Unused:
+# palette:
+#   remote: https://raw.githubusercontent.com/ricardo-semiao/ricardo-semiao/refs/heads/main/themes/palette/palette.css
+#   local: PATH_LOCAL_PALETTE
+#   target: src/global/palette.css
+#   update_required: false
