--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,4 +26,6 @@ dependencies = [
     "pkg:generic/latexmk>=4.0",
     "pkg:generic/quarto>=1.0.0",
     "pkg:generic/sass>=1.0.0",
+    "pkg:generic/git>=2.0.0",
+    "pkg:generic/uv>=0.9.0",
 ]
